{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 35,
  "lineage": "22377b88-46f9-5624-6538-d8dc7b5bd22d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6cd7b7918089d75",
            "domain": "vpc",
            "id": "eipalloc-0b6cd7b7918089d75",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-230-66-87.compute-1.amazonaws.com",
            "public_ip": "3.230.66.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "hoja-trabajo-terraform-cv-nat-gateway",
              "Path": "terraform/07-nat-gateway.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hoja-trabajo-terraform-cv-nat-gateway",
              "Path": "terraform/07-nat-gateway.tf"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068061845722:internet-gateway/igw-0f6dbf73bc9607f65",
            "id": "igw-0f6dbf73bc9607f65",
            "owner_id": "068061845722",
            "vpc_id": "vpc-0616c025468d45542"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6cd7b7918089d75",
            "association_id": "eipassoc-098f9c5146b9f8de7",
            "connectivity_type": "public",
            "id": "nat-0fcbdc25c3d076c41",
            "network_interface_id": "eni-08cb66fa85d64d23d",
            "private_ip": "10.0.0.7",
            "public_ip": "3.230.66.87",
            "subnet_id": "subnet-0a0575ef74dd5c57e",
            "tags": {
              "Environment": "dev",
              "Name": "hoja-trabajo-terraform-cv-nat-gateway",
              "Path": "terraform/07-nat-gateway.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hoja-trabajo-terraform-cv-nat-gateway",
              "Path": "terraform/07-nat-gateway.tf"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.subred-publica",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gateway_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068061845722:route-table/rtb-0afd2b96e630788c3",
            "id": "rtb-0afd2b96e630788c3",
            "owner_id": "068061845722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fcbdc25c3d076c41",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "hoja-trabajo-terraform-cv-tabla-enrutamiento-privada",
              "Path": "terraform09-tabla-enrutamiento-nat-gateway.tf",
              "using_case": "natgateway"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hoja-trabajo-terraform-cv-tabla-enrutamiento-privada",
              "Path": "terraform09-tabla-enrutamiento-nat-gateway.tf",
              "using_case": "natgateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0616c025468d45542"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.nat",
            "aws_subnet.subred-publica",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tabla_enrutamiento_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068061845722:route-table/rtb-043931da95d84f10c",
            "id": "rtb-043931da95d84f10c",
            "owner_id": "068061845722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6dbf73bc9607f65",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "hoja-trabajo-terraform-cv-tabla-enrutamiento-publica",
              "Path": "terraform/08-tabla-enrutamiento-internet-gateway-ig.tf",
              "using_case": "Acceso a Internet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hoja-trabajo-terraform-cv-tabla-enrutamiento-publica",
              "Path": "terraform/08-tabla-enrutamiento-internet-gateway-ig.tf",
              "using_case": "Acceso a Internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0616c025468d45542"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tabla-enrutamiento-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d321523ab2d106f4",
            "route_table_id": "rtb-043931da95d84f10c",
            "subnet_id": "subnet-0a0575ef74dd5c57e"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.tabla_enrutamiento_internet_gateway",
            "aws_subnet.subred-publica",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068061845722:subnet/subnet-0a0575ef74dd5c57e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0575ef74dd5c57e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068061845722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "hoja-trabajo-terraform-cv-subred-publica",
              "Path": "terraform/05-subred-publica.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hoja-trabajo-terraform-cv-subred-publica",
              "Path": "terraform/05-subred-publica.tf"
            },
            "vpc_id": "vpc-0616c025468d45542"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068061845722:vpc/vpc-0616c025468d45542",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c638a42d58b5dc4",
            "default_route_table_id": "rtb-0e9501dd4e6d48052",
            "default_security_group_id": "sg-081a3644feda1c9ef",
            "dhcp_options_id": "dopt-072f94cc6a951fe1e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0616c025468d45542",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e9501dd4e6d48052",
            "owner_id": "068061845722",
            "tags": {
              "Environment": "dev",
              "Name": "hoja-trabajo-terraform-cv-vpc",
              "Path": "terraform/03-vpc.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hoja-trabajo-terraform-cv-vpc",
              "Path": "terraform/03-vpc.tf"
            }
          }
        }
      ]
    }
  ]
}